Add historical forecast timeline
